<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:gravity="fill"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/entry_form_label_given"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/entry_form_label_given"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:gravity="fill_horizontal"
        android:rowCount="2" >

        <EditText
            android:id="@+id/value_extreme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_row="0"
            android:gravity="end"
            android:inputType="numberDecimal|numberSigned"
            android:minEms="10"
            android:singleLine="true" >

            <requestFocus
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </EditText>

        <EditText
            android:id="@+id/unit_extreme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:gravity="start"
            android:hint="@string/entry_form_unit_hint"
            android:inputType="text"
            android:minEms="2" />

        <TextView
            android:id="@+id/entry_form_label_corresponds_to"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:layout_row="1"
            android:text="@string/entry_form_corresponds_to"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="10dp" />

        <EditText
            android:id="@+id/value_means_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:gravity="end"
            android:inputType="numberDecimal|numberSigned"
            android:minEms="10"
            android:singleLine="true" />

        <EditText
            android:id="@+id/unit_means_b"
            android:layout_width="80dp"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:gravity="start"
            android:hint="@string/entry_form_unit_hint"
            android:inputType="text"
            android:minEms="2" />

    </GridLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20sp"
        android:layout_gravity="fill" />

    <TextView
        android:id="@+id/entry_form_label_requested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/entry_form_label_requested"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2" >

        <Space
            android:layout_width="20sp"
            android:layout_column="0"
            android:layout_row="0" />

        <EditText
            android:id="@+id/value_means_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:gravity="end"
            android:inputType="numberDecimal|numberSigned"
            android:minEms="10"
            android:singleLine="true" />

        <EditText
            android:id="@+id/unit_means_c"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start"
            android:hint="@string/entry_form_unit_hint"
            android:inputType="none"
            android:minEms="2" />

    </GridLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20sp"
        android:layout_gravity="fill" />

    <Button
        android:id="@+id/entry_form_button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/entry_form_button_calculate" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20sp"
        android:layout_gravity="fill" />

    <TextView
        android:id="@+id/entry_form_label_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/entry_form_label_result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1" >

        <Space
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0" />

        <EditText
            android:id="@+id/value_result"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:enabled="true"
            android:gravity="end"
            android:inputType="none"
            android:longClickable="true"
            android:minEms="10"
            android:singleLine="true"
            android:textIsSelectable="true" />

        <EditText
            android:id="@+id/unit_result"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start"
            android:hint="@string/entry_form_unit_hint"
            android:inputType="none"
            android:minEms="2" />

    </GridLayout>

    <Space 
        android:layout_width="fill_parent"
        android:layout_height="20sp" />

    <Button
        android:id="@+id/entry_form_button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/entry_form_button_reset" />

</LinearLayout>